# OrbitNavigator

./: .mxproject  CMakeLists.txt  OrbitNavigator.ioc  compile_commands.json  platformio.ini  stm32f722retx_flash.ld
Core/Inc/: stm32f7xx_hal_conf.h
Core/Src/: main.c
cmake/: gcc-arm-none-eabi.cmake
cmake/STM32G4/: CMakeLists.txt
cmake/stm32cubemx/: CMakeLists.txt  cmake_install.cmake
include/: stm32g4xx_it.h
lib/CMSIS/: CMakeLists.txt
lib/mavlink/: CMakeLists.txt
src/: main.cpp
src/main/: main.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c
